packages/web-ui-core/src/style.css
.gi-tcg-chessboard-new {
  --c-void: #4a4a4a;
  --c-electro: #b380ff;
  --c-pyro: #ff9955;
  --c-dendro: #a5c83b;
  --c-cryo: #55ddff;
  --c-geo: #ffcc00;
  --c-hydro: #3e99ff;
  --c-anemo: #80ffe6;
  --c-omni: #dcd4c2;
  /* --c-energy: #eab308; */
  --c-heal: lightgreen;
  --font-emoji: Apple Color Emoji, Segoe UI Emoji, Noto Color Emoji,
    Android Emoji, EmojiSymbols, EmojiOne Mozilla, Twemoji Mozilla,
    Segoe UI Symbol, Noto Color Emoji Compat, emoji;

  overflow: clip;

  .touch-pan:not(#notExists),
  .touch-pan * {
    touch-action: pan-x pan-y;
  }

  [data-entering] {
    animation: entity-entering 0.5s both;
  }

  [data-triggered] {
    animation: entity-triggered 0.5s both;
  }

  [data-disposing] {
    animation: entity-disposing 0.2s both;
  }

  [data-triggered][data-disposing] {
    animation:
      entity-triggered 0.5s both,
      entity-disposing 0.2s 0.5s both;
  }

  .card {
    --playable-shadow: 0 0 transparent;
    box-shadow: var(--common-shadow), var(--playable-shadow);
    transition-property: box-shadow;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 150ms;
  }

  .card[data-hidden] {
    visibility: hidden;
    pointer-events: none;
  }

  .card[data-shadow] {
    --common-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1),
      0 8px 10px -6px rgb(0 0 0 / 0.1);
  }

  .card[data-playable] {
    --playable-shadow: 0 0 5px 5px rgb(254 240 138);
  }

  .card[data-transition-transform] {
    transition-property: box-shadow, transform;
  }

  .card[data-dragging-end] {
    animation: card-dragging-end 0.2s both;
  }

  .declare-end-marker-img,
  .skill-button-img {
    background-image: var(--img-url);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
  }

  .declare-end-marker-img-button {
    background-color: transparent;
    cursor: auto;
  }

  .declare-end-marker-img-button[data-clickable] {
    cursor: pointer;
  }

  .declare-end-marker-img:has(.declare-end-marker-img-button:hover) {
    background-image: var(--img-hover-url);
  }

  .declare-end-marker-img:has(.declare-end-marker-img-button:active) {
    background-image: var(--img-active-url);
  }

  .skill-button-img-button {
    background-color: transparent;
  }

  .skill-button-img-button[data-disabled] {
    cursor: not-allowed;
  }

  .skill-button-img:has(.skill-button-img-button:hover) {
    background-image: var(--img-hover-url);
  }

  .skill-button-img:has(.skill-button-img-button:active) {
    background-image: var(--img-active-url);
  }

  .dice-panel {
    background: linear-gradient(to right,
        #9d907bff 2px,
        #86795eff 2px,
        #5e4223ff 50px,
        #5e4223ff 90%,
        #5e422300 100%);
    mask-image: linear-gradient(to bottom,
        rgba(0, 0, 0, 0) 6%,
        rgba(0, 0, 0, 0.9) 12%,
        rgba(0, 0, 0, 0.9) 82%,
        rgba(0, 0, 0, 0) 92%);

    .delicate-dice {
      --blink-opacity: 1;
      animation: blink 4s ease-in-out infinite;
    }

    .delicate-dice[data-selected] {
      --blink-opacity: 0.5;
    }
  }

  .playerinfo-box {
    background-image: linear-gradient(to right, #deab65 25%, #845f39 100%);
    border-color: #ffd89f;
  }

  .playerinfo-box[data-opp] {
    background-image: linear-gradient(to right, #4c6890 25%, #293954 100%);
    border-color: #697a8c;
  }

  .notification-box[data-opp="false"] {
    background-image: linear-gradient(to right, #786049dd 50%, #786049aa 100%);
    border-color: #644d39aa;
    --inner-background-color: #786049;
    --inner-border-color: #bea678;
    --text-color: #d9b48d;
  }

  .notification-box[data-opp="true"] {
    background-image: linear-gradient(to right, #485569dd 50%, #485569aa 100%);
    border-color: #3f4957aa;
    --inner-background-color: #485569;
    --inner-border-color: #899dc6;
    --text-color: #7e98cb;
  }

  .current-turn-hint[data-opp="false"] {
    --fg-color: #644d39;
    --bg-color: #d9b48d;
  }

  .current-turn-hint[data-opp="true"] {
    --fg-color: #3f4957;
    --bg-color: #7e98cb;
  }

  .block-opp-selected {
    --bg-color: #334355dd;
    --bd-color: #6993d8;
    --title-color: #334f76;
    --text-color: #7eb5ff;    
    /* --text-color: #334355; */
  }

  .block-my-selected {
    --bg-color: #4f4536dd;
    --bd-color: #c58438;
    --title-color: #684f30;
    --text-color: #e5aa5f;    
    /* --text-color: #4f4536; */
  }

  .block-opp-normal {
    --bg-color: #323d4ccc;
    --bd-color: #425675;
    --title-color: #32445f;
    --text-color: #7eb5ff;
  }

  .block-my-normal {
    --bg-color: #454039cc;
    --bd-color: #6c5639;
    --title-color: #544635;
    --text-color: #e5aa5f;
  }

  @supports not selector(::-webkit-scrollbar) {
    .history-scrollbar-simply {
      scrollbar-width: thin;
      scrollbar-color: #5c6983 #2c2e36;
    }
  }

  .history-scrollbar::-webkit-scrollbar {
    width: 4px;
  }

  .history-scrollbar::-webkit-scrollbar-track {
    background: #2c2e36;
  }

  .history-scrollbar::-webkit-scrollbar-thumb {
    background-color: #5c6983;
    border-radius: 2px;
    border: 0px solid transparent;
  }

  .history-card-hint {
    clip-path: polygon(0 0, 0 100%, 100% 0);
  }

  .history-indent-hint {
    clip-path: polygon(0 0, 71% 0, 100% 50%, 71% 100%, 0 100%);
  }

  .chessboard-bg {
    background-image: linear-gradient(to bottom,
        #f0fdf4ff 49.5%,
        #ddeeddff 50%,
        #f0fdf4ff 50.5%);
    box-shadow:
      inset 0 0 18px #000000,
      0 0 40px #63524a;
  }

  .burst-animator {
    box-shadow:
      inset 0 0 20px var(--color),
      0 0 20px var(--color);
    animation: var(--animation-name) 3s linear infinite;
  }

  .burst-progress {
    mask-image: linear-gradient(to top,
        #ffffffff var(--progress-value),
        transparent var(--progress-value));
  }

  .variable-diff {
    --dy: 3px;
    --dx: 10px;
    --radius: 14px;
    clip-path: shape(from var(--dx) 0px,
        line to var(--dx) var(--dy),
        arc to var(--dx) calc(100% - var(--dy)) of calc(var(--radius)),
        line to var(--dx) 100%,
        line to calc(100% - var(--dx)) 100%,
        line to calc(100% - var(--dx)) calc(100% - var(--dy)),
        arc to calc(100% - var(--dx)) var(--dy) of calc(var(--radius)),
        line to calc(100% - var(--dx)) 0px,
        close);
    border-radius: var(--radius);
    background-color: black;

    &::before {
      --radius: 12.75px;
      z-index: -1;
      position: absolute;
      inset: 1px;
      content: " ";
      background-color: var(--bg-color);
      clip-path: shape(from var(--dx) 0px,
          line to var(--dx) var(--dy),
          arc to var(--dx) calc(100% - var(--dy)) of calc(var(--radius)),
          line to var(--dx) 100%,
          line to calc(100% - var(--dx)) 100%,
          line to calc(100% - var(--dx)) calc(100% - var(--dy)),
          arc to calc(100% - var(--dx)) var(--dy) of calc(var(--radius)),
          line to calc(100% - var(--dx)) 0px,
          close);
      border-radius: var(--radius);
    }
  }

  .equipment-usage[data-usable] {
    background-image: radial-gradient(circle at center,
        #ffffbb00 0%,
        #ffffbb33 35%,
        #ffffbbff 55%,
        #8c6b4400 58%,
        #8c6b4400 61%,
        #ffaa00ff 61%,
        #ffffbb00 69%);
  }
}

@keyframes entity-entering {
  0% {
    opacity: 0;
    filter: brightness(1);
  }

  60% {
    opacity: 1;
    filter: brightness(1.5);
    box-shadow: 0px 0px 15px 10px orange;
  }

  100% {
    filter: brightness(1);
  }
}

@keyframes entity-triggered {
  0% {
    filter: brightness(1);
  }

  50% {
    filter: brightness(1.5);
    box-shadow: 0px 0px 15px 10px orange;
  }

  100% {
    filter: brightness(1);
  }
}

@keyframes entity-disposing {
  0% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

@keyframes entity-highlight {
  from {
    box-shadow: none;
  }

  to {
    box-shadow: 0 0 10px yellow inset;
  }
}

@keyframes damage-text-enter {
  50% {
    scale: 200%;
  }
}

@keyframes phase-notification {
  0% {
    opacity: 0;
  }

  20% {
    opacity: 1;
  }

  80% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

@keyframes notification-box {
  0% {
    opacity: 0;
    transform: translateX(var(--enter-offset));
  }

  15% {
    opacity: 1;
    transform: translateX(0);
  }

  85% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

@keyframes playing-card {
  0% {
    opacity: 0;
    filter: none;
    box-shadow: none;
  }

  15% {
    opacity: 1;
    filter: brightness(1.5);
    box-shadow: 0px 0px 15px 10px yellow;
  }

  85% {
    opacity: 1;
    filter: none;
    box-shadow: none;
  }

  100% {
    opacity: 0;
  }
}

@keyframes card-dragging-end {
  0% {
    filter: none;
  }

  20% {
    filter: brightness(1.5);
    box-shadow: 0px 0px 15px 10px yellow;
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

@keyframes blink {

  0%,
  100% {
    opacity: var(--blink-opacity, 1);
  }

  50% {
    opacity: 1;
  }
}

@keyframes elemental-burst-1 {
  0% {
    transform: scale(1);
    opacity: 0;
  }

  20% {
    transform: scale(1.15);
    opacity: 0.7;
  }

  40% {
    transform: scale(1.275);
    opacity: 0.45;
  }

  60% {
    transform: scale(1.375);
    opacity: 0.25;
  }

  80% {
    transform: scale(1.45);
    opacity: 0.1;
  }

  100% {
    transform: scale(1.5);
    opacity: 0;
  }
}

@keyframes elemental-burst-2 {
  0% {
    transform: scale(1);
    opacity: 0;
  }

  20% {
    transform: scale(1);
    opacity: 0;
  }

  40% {
    transform: scale(1);
    opacity: 0;
  }

  60% {
    transform: scale(1);
    opacity: 0.35;
  }

  80% {
    transform: scale(1.15);
    opacity: 0.7;
  }

  100% {
    transform: scale(1.275);
    opacity: 0;
  }
}

@keyframes elemental-burst-3 {
  0% {
    transform: scale(1.375);
    opacity: 0;
  }

  20% {
    transform: scale(1.45);
    opacity: 0.25;
  }

  40% {
    transform: scale(1.5);
    opacity: 0;
  }

  60% {
    transform: scale(1);
    opacity: 0;
  }

  80% {
    transform: scale(1);
    opacity: 0;
  }

  100% {
    transform: scale(1.375);
    opacity: 0;
  }
}

@keyframes alert-auto-hide {
  0% {
    opacity: 1;
  }

  90% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

